--- a/_config.yml
+++ b/_config.yml
@@ -87,6 +87,7 @@ pagination_dir: page
 # Include / Exclude file(s)
 ## include:/exclude: options only apply to the 'source/' folder
 include:
+  .nojekyll
 exclude:
 ignore:
 
@@ -99,3 +100,6 @@ theme: next
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: ''
+  repo: https://github.com/zlguo1996/zlguo1996.github.io
+  branch: master
+  ignore_hidden: false
